# camera_calibration_suit

./: .gitignore  README.md  README.rst  pyproject.toml
camera_calibration_suite/: __init__.py  _aruco_calibration.py  _cli.py  _generic_capture.py
tests/: test_camera_calibration_suite.py
