[tool.poetry]
name = "camera_calibration_suite"
version = "0.1.0"
description = ""
authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.5.3"
opencv-python = "^4.5.2"
opencv-contrib-python = "^4.5.2"
click = "^8.0.1"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
readme-renderer = "^29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-calibration = "camera_calibration_suite._cli:cli"
